# Native-GPU-Profiling-TF.js

./: README.md  pyproject.toml
benchmark/: cli.py  result_schema.py  runner.py  telemetry.py  timing.py  trial_manager.py  utils.py
benchmark/models/: __init__.py  registry.py
benchmark/output/: all_results.csv
benchmark/output/model_006_aggregated/: aggregated_result.json
benchmark/output/trial_001/model_006/: model_006_mobilenetv3_iterations.csv
benchmark/output/trial_002/model_006/: model_006_mobilenetv3_iterations.csv
benchmark/output/trial_003/model_006/: model_006_mobilenetv3_iterations.csv  model_006_mobilenetv3_result.json
benchmark/output/trial_004/model_006/: model_006_mobilenetv3_iterations.csv
benchmark/profilers/: base.py  ncu_parser.py  ncu_runner.py  nsys_parser.py  nsys_runner.py
configs/: experiment_manifest.yaml
native_tfjs_bench/: requirements.txt
native_tfjs_bench/benchmark/: __init__.py  env_check.py  self_test.py
native_tfjs_bench/benchmark/models/: base.py  model_mobilenetv3.py
native_tfjs_bench/benchmark/output/model_006_aggregated/: aggregated_result.csv
native_tfjs_bench/benchmark/output/trial_000/model_006/: model_006_mobilenetv3_iterations.csv  model_006_mobilenetv3_result.json
native_tfjs_bench/benchmark/output/trial_001/model_006/: model_006_mobilenetv3_result.json
native_tfjs_bench/benchmark/profilers/: __init__.py
native_tfjs_bench/configs/: device_config.yaml
native_tfjs_bench/scripts/: run_one_model.py  validate_env.py
scripts/: profile_with_ncu.py  profile_with_nsys.py  run_all.py
(+2 files in other folders)
